data/forge_javadoc/1.7.10/raw/net/minecraft/client/renderer/entity/RenderCaveSpider.md
---
title: "RenderCaveSpider"
description: "public class RenderCaveSpider extends RenderSpider"
package: "net/minecraft/client/renderer/entity"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/client/renderer/entity/RenderCaveSpider.html"
sourceType: javadoc
---

# RenderCaveSpider

**Inheritance:** java.lang.Object → net.minecraft.client.renderer.entity.Render → net.minecraft.client.renderer.entity.RendererLivingEntity → net.minecraft.client.renderer.entity.RenderLiving → net.minecraft.client.renderer.entity.RenderSpider → net.minecraft.client.renderer.entity.RenderCaveSpider

## Class signature

```java
public class RenderCaveSpider extends RenderSpider
```

## Methods

- `protected ResourceLocation getEntityTexture(Entity p_110775_1_)`
- `protected ResourceLocation getEntityTexture(EntityCaveSpider p_110775_1_)`
- `protected ResourceLocation getEntityTexture(EntitySpider p_110775_1_)`
- `protected void preRenderCallback(EntityCaveSpider p_77041_1_, float p_77041_2_)`
- `protected void preRenderCallback(EntityLivingBase p_77041_1_, float p_77041_2_)`

## Fields

- `RenderCaveSpider`
