data/forge_javadoc/1.8.9/raw/net/minecraft/client/renderer/entity/RenderCaveSpider.md
---
title: "RenderCaveSpider"
description: "public class RenderCaveSpider extends RenderSpider<EntityCaveSpider>"
package: "net/minecraft/client/renderer/entity"
version: "1.8.9"
forgeBuild: "11.15.1.2318"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.8.9-11.15.1.2318/net/minecraft/client/renderer/entity/RenderCaveSpider.html"
sourceType: javadoc
---

# RenderCaveSpider

**Inheritance:** java.lang.Object → net.minecraft.client.renderer.entity.Render<T> → net.minecraft.client.renderer.entity.RendererLivingEntity<T> → net.minecraft.client.renderer.entity.RenderLiving<T> → net.minecraft.client.renderer.entity.RenderSpider<EntityCaveSpider> → net.minecraft.client.renderer.entity.RenderCaveSpider

## Class signature

```java
public class RenderCaveSpider extends RenderSpider<EntityCaveSpider>
```

## Methods

- `protected ResourceLocation getEntityTexture(EntityCaveSpider entity)` — Returns the location of an entity's texture.
- `protected void preRenderCallback(EntityCaveSpider entitylivingbaseIn, float partialTickTime)` — Allows the render to do any OpenGL state modifications necessary before the model is rendered.

## Fields

- `RenderCaveSpider`
